# ScFR1

./: .firebaserc  .gitignore  README.md  firebase.js  index.html  package-lock.json  package.json
.firebase/: hosting.ZGlzdA.cache
backend/: Cargo.toml  awss3.rs  main.rs  my_database.db
src/: index.css  main.jsx
src/components/: About.jsx  AllPages.jsx  Contact.jsx  Home.jsx  Tierlist.jsx
src/components/tierlist/: BrowseTierlist.jsx  CreateTierlist.jsx  Tierlist.jsx  TierlistTemp.jsx
src/components/tierlist/script/: TemplatePage.jsx  candidateImage.jsx
src/modules/: About.module.css  AllPages.module.css  Contact.module.css  Home.module.css  Tierlist.module.css
src/modules/tierlistmodules/: BrowseTierlist.module.css  CreateTierlist.module.css  TemplatePage.module.css  Tierlist.module.css  TierlistTemp.module.css
