[package]
name = "backAxum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["cors"] }
sqlx = { version = "0.8.2", features =  ["runtime-tokio-rustls", "sqlite"]}
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.1"