[package]
name = "backAxum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["cors","limit","trace"] }
sqlx = { version = "0.8.2", features =  ["runtime-tokio-rustls", "sqlite"]}
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.59.0"
chrono = "0.4.38"
fast_image_resize = "5.0.0"
image = "0.25.4"
rand = "0.8.5"
base64 = "0.22.1"
